--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="https://image.flaticon.com/icons/svg/906/906334.svg" />
     <title>Priorize</title>
   </head>
   <body>
